# watcher

./: Cargo.toml
.github/workflows/: cd-prelease.yml  cd-template.yml  cleanup.yml  release.yml
src/: main.rs  update.rs  watch.rs
src/commands/: mod.rs
src/commands/update/: mod.rs
src/commands/watch/: mod.rs
