[package]
name = "watcher"
version = "0.1.5"
edition = "2021"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
notify = "8.2.0"
self_update = { version = "0.42.0", features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate"
] }
semver = "1.0.27"
